Add Register GRPC handler for auth service.
